[package]
name = "dogtag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
env_logger = "0.11.3"
governor = "0.6.3"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["cookies", "gzip"] }
scraper = "0.19.0"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
